# HydgToolbox

./: .gitignore  .pnp.cjs  CMakeLists.txt  CMakeUserPresets.json  HydgToolbox.sln  HydgToolbox.vcxproj  HydgToolbox.vcxproj.filters  README.md  package.json
src/: HydgToolbox.qrc  HydgToolbox.rc  main.cpp
src/PublicHeaders/: HydgPluginInterface.h  PubSubEventBusInterface.h
src/config/: GlobalConfig.cpp  GlobalConfig.h
src/event/: EventType.h  PubSubEventBus.cpp  PubSubEventBus.h  ZeroMQEventServer.cpp  ZeroMQEventServer.h
src/logger/: Logger.cpp  Logger.h
src/plugin/: HydgPluginInfo.h  HydgPluginInterface.h  PluginController.cpp  PluginController.h  PluginManager.cpp  PluginManager.h
src/plugins/: README.md
src/plugins/CPluginLoader/: CMakeLists.txt  dllmain.cpp  dllmain.h
src/plugins/CPluginLoader/plugin/: CPlugin.cpp  CPlugin.h  CPluginController.cpp  CPluginController.h  CPluginManager.cpp  CPluginManager.h
src/plugins/DesktopTimer/: CMakeLists.txt  DesktopTimer.cpp  DesktopTimer.h  dllmain.cpp
src/toolbox/: HydgToolbox.cpp  HydgToolbox.h  HydgToolbox.qrc  HydgToolbox.ui  PluginCardDelegate.h  PluginListView.cpp  PluginListView.h
src/utils/: ThreadSafeUnorderedMap.h
